fix(ui): heading height on mobile

--- a/src/app/recipe/[id]/styles.module.css
+++ b/src/app/recipe/[id]/styles.module.css
@@ -20,6 +20,7 @@
   display: flex;
   align-items: center;
   border-bottom: 1px solid var(--mantine-color-gray-3);
+  padding-bottom: 0;
 }
 
 .recipe-heading h2 {
@@ -158,6 +159,8 @@
   .recipe-heading {
     grid-column: span 12;
     order: -1;
+    min-height: auto;
+    padding-bottom: 2rem;
   }
   .recipe-heading h2 {
     font-size: 1.5rem;
